[FIX] account_reports: reports on mobile
Fixes an issue with the reports when opening them
on mobile (more specifically, ipad air).
The report width isn't correct at this time.

By adding a computed width in the class, we keep
the current behaviour in desktop/wide screen but
also allow the report to take the whole width in
smaller screen.

Task id # 3249004

closes odoo/enterprise#39141

X-original-commit: 7758aeb35e793b992cf627f76a79417dc76aafef

--- a/account_reports/static/src/scss/account_financial_report.scss
+++ b/account_reports/static/src/scss/account_financial_report.scss
@@ -60,6 +60,7 @@
         margin: 24px 12px 48px;
         padding: 24px;
         max-width: calc(100% - 12px); // Prevents the sheet to take horizontal space that is not available
+        width: calc(100% - 12px);
 
         .table-responsive {
             min-height: 470px;
